<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/edit_year"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/edit_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/edit_month"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/edit_day"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_statistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="统计金额"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/text_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:textSize="20dp" />

</LinearLayout>